Fix img wrapping.

--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -45,7 +45,7 @@ iframe, img, embed, object, video {
     max-width: 100%;
 }
 
-img {
+.img-wrap {
     margin-left: 10px;
     margin-right: 10px;
 }
